# Recognizing-Handwritten-Digits

./: app.py  model.py  pyproject.toml  requirements.txt  utils.py
